package AlquilerVehiculos.Vehiculo;public enum TipoVehiculo {
}
